# Algoritmo-Hibrido-Genetico-Quimico

./: .gitignore  README.md  main.py  pyproject.toml  resultadosAG_1.csv  resultadosAG_2.csv  resultadosAG_3.csv  resultadosAG_4.csv  resultadosAG_5.csv  resultadosCRO_1.csv  resultadosH_2.csv  resultadosH_3.csv  resultadosH_4.csv  resultadosH_5.csv
Algoritmo/AG_Estandar/: Ag.py
Algoritmo/Models/: Celula.py
Grafo/: Grafo.txt  generador_grafo.py
analisis/: analisis_ag_vs_h.ipynb
analisis/analisis/: resumen_comparativo.csv
src/: main.py
src/Algoritmo/CRO/: CRO.py
src/Algoritmo/Genetico/: Genetico.py
src/Algoritmo/Hibrido/: GeneticoCRO.py  Traductor.py
src/Algoritmo/Models/: Celula.py  Molecula.py
src/Grafo/: Generador_grafo_real.py  Grafo_Coahuila_Final.txt  poblacion.csv
