[tool.poetry]
name = "AGHibrido"
version = "0.1.0"
description = "Proyecto de Algoritmo Hibrido"
authors = ["Grimaldo <tu@email.com>"]
readme = "README.md"
packages = [{include = "Algoritmo", from = "src"}, {include = "Grafo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
pandas = "^3.0.1"
googlemaps = "^4.10.0"
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
